// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotelsReducer setCurrentSearchStats should update currentSearchStats 1`] = `
Object {
  "cityId": null,
  "currentSearchStats": Object {
    "priceMax": 3999,
    "priceMin": 200,
  },
  "location": "",
  "searchParams": Object {
    "checkin": null,
    "checkout": null,
    "roomsConfiguration": Object {
      "adultsCount": 1,
      "children": Array [],
    },
  },
}
`;

exports[`HotelsReducer setSearch it should update search filters for list of hotels 1`] = `
Object {
  "cityId": null,
  "currentSearchStats": Object {
    "priceMax": 9007199254740991,
    "priceMin": 0,
  },
  "location": "",
  "searchParams": Object {
    "checkin": 1970-01-01T00:00:00.001Z,
    "checkout": null,
    "roomsConfiguration": Object {
      "adultsCount": 1,
      "children": Array [],
    },
  },
}
`;
